# lab_OP_19

./: CMakeLists.txt  main.c  task_1_test_3.txt  task_2_test_1.txt  task_2_test_2.txt  task_3_test_2.txt  task_4_test_1.txt  task_4_test_3.txt  task_5_test_1.txt
data_structures/: CMakeLists.txt
data_structures/matrix/: matrix.c  matrix.h
data_structures/string/: string_.c  string_.h
data_structures/string/tasks/: areThereAnyWordsFromTheSameSetOfLetters.h  combiningStrings.h  getIdenticalStringInSize.h  getWordBeforeWordThatInSecondLine.h  isEqualWordsInString.h  lastWordInFirstStringInSecondString.h  lettersBelongString.h  lexicographicallyCorrect.h  numberOfPalindromes.h  removeExtraSpaces.h  removeNonLetters.h  removePalindromes.h  replaceDigitsToSpace.h  replaceWord.h  reverseDigitsWithWords.h  reversePrint.h  reverseString.h  stringWithoutWordsEqualLastWord.h  wordBeforeFirstWordWithA.h
task/: calculating_an_expression.h  filter_word.h  floating_point_number.h  long_words_in_lines.h  transposition_matrix.h
